# Rupert-AI

./: .replit  README.md  ai_integration.py  bot.py  config.py  main.py  pyproject.toml  replit.nix  run_bot.py  test_tts.py  transcription.py  tts.py  ubuntu_install.sh  utils.py  workflow_python_test.py
docs/: british_voice_guide.md  geoguessr_guide.md
templates/: dashboard.html  index.html  settings.html
